--- a/Crypto/對稱式/AES/test.ipynb
+++ b/Crypto/對稱式/AES/test.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "from Crypto.Cipher import AES\r\n",
     "\r\n",
@@ -49,7 +49,10 @@
     "message = b\"flag(HappyCrypt)\"\r\n",
     "\r\n",
     "ciphertext = obj.encrypt(message)\r\n",
-    "print(ciphertext)"
+    "print(ciphertext)\r\n",
+    "\r\n",
+    "obj2 = AES.new(b'This is a key123', AES.MODE_CBC, b'This is an IV456')\r\n",
+    "obj2.decrypt(ciphertext)"
    ],
    "outputs": [
     {
@@ -58,20 +61,7 @@
      "text": [
       "b'J\\xae\\xd1J\\xbdS\\x8d\\x99\\xaf\\xc3N\\xba\\xde\\xeb>['\n"
      ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "from Crypto.Cipher import AES\r\n",
-    "obj2 = AES.new(b'This is a key123', AES.MODE_CBC, b'This is an IV456')\r\n",
-    "\r\n",
-    "obj2.decrypt(ciphertext)"
-   ],
-   "outputs": [
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -80,7 +70,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 1
     }
    ],
    "metadata": {}
