--- a/KSU/一年級/期中平時報告.md
+++ b/KSU/一年級/期中平時報告.md
@@ -184,6 +184,56 @@ slideOptions:
 ----
 
 ### RSA
+#### 生成私鑰(Private Key)
+```shell
+openssl genrsa [-out filename] [numbits]
+```
+- genrsa => 用來生成 RSA
+- -out => 輸出私鑰到指定檔案。
+- numbits => 私鑰長度。
+
+![](https://i.imgur.com/MTuC5Pv.png)
+
+----
+
+### RSA
+#### 生成公鑰(Public Key)
+```shell
+ openssl rsa [-in filename] [-out filename] [-outform PEM|NET|DER] [-pubout]
+```
+- -in => 指定要輸入的私鑰。
+- -out => 輸出公鑰到指定檔案。
+- -outform => 指定輸出格式。
+- -pubout => 將輸出設為公鑰(預設為私鑰)。
+
+![](https://i.imgur.com/6tJvuYX.png)
+
+----
+
+### RSA
+#### 加密(Encrypt)
+- 公鑰加密
+	```shell
+	openssl rsautl [-encrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
+    ```
+- 私鑰加密
+    ```shell
+    openssl rsautl [-encrypt] [-inkey private_key_file] [-in filename] [-out filename]
+    ```
+
+----
+
+### RSA
+#### 解密(decrypt)
+- 公鑰解密
+    ```shell
+    openssl rsautl [-decrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
+    ```
+
+- 私鑰解密
+    ```shell
+    openssl rsautl [-decrypt] [-inkey private_key_file] [-in filename] [-out filename]
+    ```
 
 ---
 
