--- a/KSU/一年級/期中平時報告.md
+++ b/KSU/一年級/期中平時報告.md
@@ -188,7 +188,790 @@ slideOptions:
 ```shell
 openssl genrsa [-out filename] [numbits]
 ```
+- genrsa => 用來生成 RSA---
+title: 期中平時報告_OpenSSL_2021
+tags: KSU_exam
+lang: zh-tw
+slideOptions:
+    theme: night    # 顏色主題
+    transition: 'convex'    # 換頁動畫
+    parallaxBackgroundImage: "https://eskipaper.com/images/dark-background-wallpaper-1.jpg"
+    parallaxBackgroundRepeat: no-repeat
+    parallaxBackgroundSize: cover
+---
+
+{%hackmd theme-dark %}
+
+# 使用openssl實作現代密碼學
+- 姓名：何崇睿
+- 學號：4100E005
+- 班級：四資工一A
+
+---
+
+# 介紹
+- OpenSSL 是一個加密工具包。
+- 實現了 SSL v2 / v3 和 TLS v1 網絡協議以及它們所需的相關加密標準。
+- [openssl.org](https://www.openssl.org/)
+
+----
+
+### SSL(已被破解)
+- Secure Sockets Layer(安全通訊層)
+- 用於保持網際網路連線安全以及防止在兩個系統之間發送的所有敏感資料被罪犯讀取及修改任何傳輸的資訊，包括潛在的個人詳細資料
+
+----
+
+### TLS：
+- Transport Layer Security(傳輸層安全)
+- 是更新、更安全的 SSL 版本，通常也會稱為SSL
+
+----
+
+### Reference
+- [終極指南什麼是 SSL、TLS 以及 HTTPS？](https://www.websecurity.digicert.com/zh/hk/security-topics/what-is-ssl-tls-https)
+
+---
+
+# 可用於
+- 建立和管理私鑰(private keys)、公鑰(public keys)和參數(parameters)
+- 公鑰加密操作
+- 生成x.509證書、CSRs和CRLs
+- 計算Message Digests
+
+----
+
+# 可用於
+- 加密(Encryption)或解密(Decryption)
+- SSL / TLS 客戶端(Client)和伺服端(Server)測試
+- 處理[S / MIME](https://zh.wikipedia.org/wiki/S/MIME)的簽章(signed)或加密郵件
+- [時間戳](https://zh.wikipedia.org/wiki/%E6%99%82%E9%96%93%E6%88%B3)請求(requests)、生成(generation)和驗證(verification)
+
+----
+
+### Message Digests
+- 訊息摘要
+- 利用Hash Function加密你要傳輸的訊息所產生出來
+- 用來驗證訊息的完整性
+- [參考網站](https://david50.pixnet.net/blog/post/28798505)
+
+----
+
+### Hash Function
+- 常見的有：
+    - [MD5(Message-Digest algorithm 5)](https://zh.wikipedia.org/wiki/MD5)
+    - [SHA(Secure Hash Algorithm)](https://zh.wikipedia.org/wiki/SHA%E5%AE%B6%E6%97%8F)
+    - [MAC(Message Authentication Code)](https://zh.wikipedia.org/wiki/%E8%A8%8A%E6%81%AF%E9%91%91%E5%88%A5%E7%A2%BC)
+    - [HMAC(Hash-based Message Authentication Code)](https://zh.wikipedia.org/wiki/HMAC)
+
+----
+
+### Hash Function
+- 特性：
+    - 計算出Message Digests不須花太多時間
+    - 不可逆
+    - 不同訊息所算出來的Message Digests必須是不同的
+
+---
+
+# 下載
+
+----
+
+### [Kali Linux](https://www.kali.org/get-kali/#kali-platforms)
+- kali linux 已經幫你下載好openssl了
+- 確認已下載
+    ![](https://i.imgur.com/6dhA0yW.png)
+
+----
+
+### [Ubuntu 20.04](https://ubuntu.com/download/desktop)
+- 下載
+	```shell
+	sudo apt install openssl
+	```
+- 確認已下載
+![](https://i.imgur.com/pVEoZL4.png)
+
+----
+
+### [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb?hl=zh-tw)
+- 下載
+    ```shell
+    !apt install openssl
+    ```
+- 確認已下載
+![](https://i.imgur.com/AJGjJKp.png)
+
+----
+
+### [Python](https://www.python.org/)
+- 下載
+    ```shell
+    pip install pyopenssl
+    ```
+- 確認已下載
+![](https://i.imgur.com/ltfeJzT.png)
+
+---
+
+# 指令用法
+
+----
+
+### version
+- 顯示 OpenSSL 版本
+	```shell
+	openssl version
+	```
+
+----
+
+### enc
+- 以指定的 cipher 進行資料的加解密，不管加密或解密都是使用這一個指令
+- Encrypt
+	```shell
+	openssl enc -e [指定 cipher] -in [input file] -out [output file]
+	```
+- Decrypt
+    ```shell
+    openssl enc -d [指定 cipher] -in [input file] -out [output file]
+    ```
+
+---
+
+# 對稱式加解密
+
+----
+
+### AES
+- Encrypt
+    ```shell
+    openssl -e -aes[key長度]-[加密模式] -in [input file] -out [output file]
+    
+                                        or
+                                         
+    openssl -e -aes-[key長度]-[加密模式] -in [input file] -out [output file]
+    ```
+- Decrypt
+    ```shell
+    openssl -d -aes[key長度]-[加密模式] -in [input file] -out [output file]
+    
+                                        or
+                                         
+    openssl -d -aes-[key長度]-[加密模式] -in [input file] -out [output file]
+    ```
+
+----
+
+### DES
+
+
+---
+
+# 非對稱式加解密
+
+----
+
+### RSA
+#### 生成私鑰(Private Key)
+```shell
+openssl genrsa [-out filename] [numbits]
+```
 - genrsa => 用來生成 RSA
+- -out => 輸出私鑰到指定檔案。
+- numbits => 私鑰長度。
+
+![](https://i.imgur.com/MTuC5Pv.png)
+
+----
+
+#### 生成公鑰(Public Key)
+```shell
+ openssl rsa [-in filename] [-out filename] [-outform PEM|NET|DER] [-pubout]
+```
+- -in => 指定要輸入的私鑰。
+- -out => 輸出公鑰到指定檔案。
+- -outform => 指定輸出格式。
+- -pubout => 將輸出設為公鑰(預設為私鑰)。
+
+![](https://i.imgur.com/6tJvuYX.png)
+
+----
+
+#### 加密(Encrypt)
+- 公鑰加密
+	```shell
+	openssl rsautl [-encrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
+    ```
+	- -inkey => 指定要用來加密的金鑰(預設為私鑰)。
+	- -pubin => 將 -inkey 指定用來加密的金鑰設為公鑰。
+	- -in => 指定要加密的檔案。
+	- -out => 指定輸出加密後的內容的檔案。
+    
+    ![](https://i.imgur.com/ZlfeDjf.png)
+
+----
+
+#### 加密(Encrypt)
+- 私鑰加密
+    ```shell
+    openssl rsautl [-encrypt] [-inkey private_key_file] [-in filename] [-out filename]
+    ```
+    - 去除 -pubin => -inkey 預設為指定私鑰來加密。
+    
+    ![](https://i.imgur.com/kWJdlyZ.png)
+
+----
+
+#### 解密(decrypt)
+```shell
+openssl rsautl [-decrypt] [-inkey private_key_file] [-in filename] [-out filename]
+```
+- 解密只能使用私鑰。
+- -in => 要解密的檔案。
+- -out => 指定輸出解密後的內容的檔案。
+
+![](https://i.imgur.com/wZnQzD1.png)
+
+---
+
+# Hash
+
+----
+
+### md5
+
+----
+
+### sha
+
+---
+
+# PyOpenSSL
+- [pyopenssl.org](https://www.pyopenssl.org/en/stable/index.html)---
+title: 期中平時報告_OpenSSL_2021
+tags: KSU_exam
+lang: zh-tw
+slideOptions:
+    theme: night    # 顏色主題
+    transition: 'convex'    # 換頁動畫
+    parallaxBackgroundImage: "https://eskipaper.com/images/dark-background-wallpaper-1.jpg"
+    parallaxBackgroundRepeat: no-repeat
+    parallaxBackgroundSize: cover
+---
+
+{%hackmd theme-dark %}
+
+# 使用openssl實作現代密碼學
+- 姓名：何崇睿
+- 學號：4100E005
+- 班級：四資工一A
+
+---
+
+# 介紹
+- OpenSSL 是一個加密工具包。
+- 實現了 SSL v2 / v3 和 TLS v1 網絡協議以及它們所需的相關加密標準。
+- [openssl.org](https://www.openssl.org/)
+
+----
+
+### SSL(已被破解)
+- Secure Sockets Layer(安全通訊層)
+- 用於保持網際網路連線安全以及防止在兩個系統之間發送的所有敏感資料被罪犯讀取及修改任何傳輸的資訊，包括潛在的個人詳細資料
+
+----
+
+### TLS：
+- Transport Layer Security(傳輸層安全)
+- 是更新、更安全的 SSL 版本，通常也會稱為SSL
+
+----
+
+### Reference
+- [終極指南什麼是 SSL、TLS 以及 HTTPS？](https://www.websecurity.digicert.com/zh/hk/security-topics/what-is-ssl-tls-https)
+
+---
+
+# 可用於
+- 建立和管理私鑰(private keys)、公鑰(public keys)和參數(parameters)
+- 公鑰加密操作
+- 生成x.509證書、CSRs和CRLs
+- 計算Message Digests
+
+----
+
+# 可用於
+- 加密(Encryption)或解密(Decryption)
+- SSL / TLS 客戶端(Client)和伺服端(Server)測試
+- 處理[S / MIME](https://zh.wikipedia.org/wiki/S/MIME)的簽章(signed)或加密郵件
+- [時間戳](https://zh.wikipedia.org/wiki/%E6%99%82%E9%96%93%E6%88%B3)請求(requests)、生成(generation)和驗證(verification)
+
+----
+
+### Message Digests
+- 訊息摘要
+- 利用Hash Function加密你要傳輸的訊息所產生出來
+- 用來驗證訊息的完整性
+- [參考網站](https://david50.pixnet.net/blog/post/28798505)
+
+----
+
+### Hash Function
+- 常見的有：
+    - [MD5(Message-Digest algorithm 5)](https://zh.wikipedia.org/wiki/MD5)
+    - [SHA(Secure Hash Algorithm)](https://zh.wikipedia.org/wiki/SHA%E5%AE%B6%E6%97%8F)
+    - [MAC(Message Authentication Code)](https://zh.wikipedia.org/wiki/%E8%A8%8A%E6%81%AF%E9%91%91%E5%88%A5%E7%A2%BC)
+    - [HMAC(Hash-based Message Authentication Code)](https://zh.wikipedia.org/wiki/HMAC)
+
+----
+
+### Hash Function
+- 特性：
+    - 計算出Message Digests不須花太多時間
+    - 不可逆
+    - 不同訊息所算出來的Message Digests必須是不同的
+
+---
+
+# 下載
+
+----
+
+### [Kali Linux](https://www.kali.org/get-kali/#kali-platforms)
+- kali linux 已經幫你下載好openssl了
+- 確認已下載
+    ![](https://i.imgur.com/6dhA0yW.png)
+
+----
+
+### [Ubuntu 20.04](https://ubuntu.com/download/desktop)
+- 下載
+	```shell
+	sudo apt install openssl
+	```
+- 確認已下載
+![](https://i.imgur.com/pVEoZL4.png)
+
+----
+
+### [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb?hl=zh-tw)
+- 下載
+    ```shell
+    !apt install openssl
+    ```
+- 確認已下載
+![](https://i.imgur.com/AJGjJKp.png)
+
+----
+
+### [Python](https://www.python.org/)
+- 下載
+    ```shell
+    pip install pyopenssl
+    ```
+- 確認已下載
+![](https://i.imgur.com/ltfeJzT.png)
+
+---
+
+# 指令用法
+
+----
+
+### version
+- 顯示 OpenSSL 版本
+	```shell
+	openssl version
+	```
+
+----
+
+### enc
+- 以指定的 cipher 進行資料的加解密，不管加密或解密都是使用這一個指令
+- Encrypt
+	```shell
+	openssl enc -e [指定 cipher] -in [input file] -out [output file]
+	```
+- Decrypt
+    ```shell
+    openssl enc -d [指定 cipher] -in [input file] -out [output file]
+    ```
+
+---
+
+# 對稱式加解密
+
+----
+
+### AES
+- Encrypt
+    ```shell
+    openssl -e -aes[key長度]-[加密模式] -in [input file] -out [output file]
+    
+                                        or
+                                         
+    openssl -e -aes-[key長度]-[加密模式] -in [input file] -out [output file]
+    ```
+- Decrypt
+    ```shell
+    openssl -d -aes[key長度]-[加密模式] -in [input file] -out [output file]
+    
+                                        or
+                                         
+    openssl -d -aes-[key長度]-[加密模式] -in [input file] -out [output file]
+    ```
+
+----
+
+### DES
+
+
+---
+
+# 非對稱式加解密
+
+----
+
+### RSA
+#### 生成私鑰(Private Key)
+```shell
+openssl genrsa [-out filename] [numbits]
+```
+- genrsa => 用來生成 RSA
+- -out => 輸出私鑰到指定檔案。
+- numbits => 私鑰長度。
+
+![](https://i.imgur.com/MTuC5Pv.png)
+
+----
+
+#### 生成公鑰(Public Key)
+```shell
+ openssl rsa [-in filename] [-out filename] [-outform PEM|NET|DER] [-pubout]
+```
+- -in => 指定要輸入的私鑰。
+- -out => 輸出公鑰到指定檔案。
+- -outform => 指定輸出格式。
+- -pubout => 將輸出設為公鑰(預設為私鑰)。
+
+![](https://i.imgur.com/6tJvuYX.png)
+
+----
+
+#### 加密(Encrypt)
+- 公鑰加密
+	```shell
+	openssl rsautl [-encrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
+    ```
+	- -inkey => 指定要用來加密的金鑰(預設為私鑰)。
+	- -pubin => 將 -inkey 指定用來加密的金鑰設為公鑰。
+	- -in => 指定要加密的檔案。
+	- -out => 指定輸出加密後的內容的檔案。
+    
+    ![](https://i.imgur.com/ZlfeDjf.png)
+
+----
+
+#### 加密(Encrypt)
+- 私鑰加密
+    ```shell
+    openssl rsautl [-encrypt] [-inkey private_key_file] [-in filename] [-out filename]
+    ```
+    - 去除 -pubin => -inkey 預設為指定私鑰來加密。
+    
+    ![](https://i.imgur.com/kWJdlyZ.png)
+
+----
+
+#### 解密(decrypt)
+```shell
+openssl rsautl [-decrypt] [-inkey private_key_file] [-in filename] [-out filename]
+```
+- 解密只能使用私鑰。
+- -in => 要解密的檔案。
+- -out => 指定輸出解密後的內容的檔案。
+
+![](https://i.imgur.com/wZnQzD1.png)
+
+---
+
+# Hash
+
+----
+
+### md5
+
+----
+
+### sha
+
+---
+
+# PyOpenSSL
+- [pyopenssl.org](https://www.pyopenssl.org/en/stable/index.html)---
+title: 期中平時報告_OpenSSL_2021
+tags: KSU_exam
+lang: zh-tw
+slideOptions:
+    theme: night    # 顏色主題
+    transition: 'convex'    # 換頁動畫
+    parallaxBackgroundImage: "https://eskipaper.com/images/dark-background-wallpaper-1.jpg"
+    parallaxBackgroundRepeat: no-repeat
+    parallaxBackgroundSize: cover
+---
+
+{%hackmd theme-dark %}
+
+# 使用openssl實作現代密碼學
+- 姓名：何崇睿
+- 學號：4100E005
+- 班級：四資工一A
+
+---
+
+# 介紹
+- OpenSSL 是一個加密工具包。
+- 實現了 SSL v2 / v3 和 TLS v1 網絡協議以及它們所需的相關加密標準。
+- [openssl.org](https://www.openssl.org/)
+
+----
+
+### SSL(已被破解)
+- Secure Sockets Layer(安全通訊層)
+- 用於保持網際網路連線安全以及防止在兩個系統之間發送的所有敏感資料被罪犯讀取及修改任何傳輸的資訊，包括潛在的個人詳細資料
+
+----
+
+### TLS：
+- Transport Layer Security(傳輸層安全)
+- 是更新、更安全的 SSL 版本，通常也會稱為SSL
+
+----
+
+### Reference
+- [終極指南什麼是 SSL、TLS 以及 HTTPS？](https://www.websecurity.digicert.com/zh/hk/security-topics/what-is-ssl-tls-https)
+
+---
+
+# 可用於
+- 建立和管理私鑰(private keys)、公鑰(public keys)和參數(parameters)
+- 公鑰加密操作
+- 生成x.509證書、CSRs和CRLs
+- 計算Message Digests
+
+----
+
+# 可用於
+- 加密(Encryption)或解密(Decryption)
+- SSL / TLS 客戶端(Client)和伺服端(Server)測試
+- 處理[S / MIME](https://zh.wikipedia.org/wiki/S/MIME)的簽章(signed)或加密郵件
+- [時間戳](https://zh.wikipedia.org/wiki/%E6%99%82%E9%96%93%E6%88%B3)請求(requests)、生成(generation)和驗證(verification)
+
+----
+
+### Message Digests
+- 訊息摘要
+- 利用Hash Function加密你要傳輸的訊息所產生出來
+- 用來驗證訊息的完整性
+- [參考網站](https://david50.pixnet.net/blog/post/28798505)
+
+----
+
+### Hash Function
+- 常見的有：
+    - [MD5(Message-Digest algorithm 5)](https://zh.wikipedia.org/wiki/MD5)
+    - [SHA(Secure Hash Algorithm)](https://zh.wikipedia.org/wiki/SHA%E5%AE%B6%E6%97%8F)
+    - [MAC(Message Authentication Code)](https://zh.wikipedia.org/wiki/%E8%A8%8A%E6%81%AF%E9%91%91%E5%88%A5%E7%A2%BC)
+    - [HMAC(Hash-based Message Authentication Code)](https://zh.wikipedia.org/wiki/HMAC)
+
+----
+
+### Hash Function
+- 特性：
+    - 計算出Message Digests不須花太多時間
+    - 不可逆
+    - 不同訊息所算出來的Message Digests必須是不同的
+
+---
+
+# 下載
+
+----
+
+### [Kali Linux](https://www.kali.org/get-kali/#kali-platforms)
+- kali linux 已經幫你下載好openssl了
+- 確認已下載
+    ![](https://i.imgur.com/6dhA0yW.png)
+
+----
+
+### [Ubuntu 20.04](https://ubuntu.com/download/desktop)
+- 下載
+	```shell
+	sudo apt install openssl
+	```
+- 確認已下載
+![](https://i.imgur.com/pVEoZL4.png)
+
+----
+
+### [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb?hl=zh-tw)
+- 下載
+    ```shell
+    !apt install openssl
+    ```
+- 確認已下載
+![](https://i.imgur.com/AJGjJKp.png)
+
+----
+
+### [Python](https://www.python.org/)
+- 下載
+    ```shell
+    pip install pyopenssl
+    ```
+- 確認已下載
+![](https://i.imgur.com/ltfeJzT.png)
+
+---
+
+# 指令用法
+
+----
+
+### version
+- 顯示 OpenSSL 版本
+	```shell
+	openssl version
+	```
+
+----
+
+### enc
+- 以指定的 cipher 進行資料的加解密，不管加密或解密都是使用這一個指令
+- Encrypt
+	```shell
+	openssl enc -e [指定 cipher] -in [input file] -out [output file]
+	```
+- Decrypt
+    ```shell
+    openssl enc -d [指定 cipher] -in [input file] -out [output file]
+    ```
+
+---
+
+# 對稱式加解密
+
+----
+
+### AES
+- Encrypt
+    ```shell
+    openssl -e -aes[key長度]-[加密模式] -in [input file] -out [output file]
+    
+                                        or
+                                         
+    openssl -e -aes-[key長度]-[加密模式] -in [input file] -out [output file]
+    ```
+- Decrypt
+    ```shell
+    openssl -d -aes[key長度]-[加密模式] -in [input file] -out [output file]
+    
+                                        or
+                                         
+    openssl -d -aes-[key長度]-[加密模式] -in [input file] -out [output file]
+    ```
+
+----
+
+### DES
+
+
+---
+
+# 非對稱式加解密
+
+----
+
+### RSA
+#### 生成私鑰(Private Key)
+```shell
+openssl genrsa [-out filename] [numbits]
+```
+- genrsa => 用來生成 RSA
+- -out => 輸出私鑰到指定檔案。
+- numbits => 私鑰長度。
+
+![](https://i.imgur.com/MTuC5Pv.png)
+
+----
+
+#### 生成公鑰(Public Key)
+```shell
+ openssl rsa [-in filename] [-out filename] [-outform PEM|NET|DER] [-pubout]
+```
+- -in => 指定要輸入的私鑰。
+- -out => 輸出公鑰到指定檔案。
+- -outform => 指定輸出格式。
+- -pubout => 將輸出設為公鑰(預設為私鑰)。
+
+![](https://i.imgur.com/6tJvuYX.png)
+
+----
+
+#### 加密(Encrypt)
+- 公鑰加密
+	```shell
+	openssl rsautl [-encrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
+    ```
+	- -inkey => 指定要用來加密的金鑰(預設為私鑰)。
+	- -pubin => 將 -inkey 指定用來加密的金鑰設為公鑰。
+	- -in => 指定要加密的檔案。
+	- -out => 指定輸出加密後的內容的檔案。
+    
+    ![](https://i.imgur.com/ZlfeDjf.png)
+
+----
+
+#### 加密(Encrypt)
+- 私鑰加密
+    ```shell
+    openssl rsautl [-encrypt] [-inkey private_key_file] [-in filename] [-out filename]
+    ```
+    - 去除 -pubin => -inkey 預設為指定私鑰來加密。
+    
+    ![](https://i.imgur.com/kWJdlyZ.png)
+
+----
+
+#### 解密(decrypt)
+```shell
+openssl rsautl [-decrypt] [-inkey private_key_file] [-in filename] [-out filename]
+```
+- 解密只能使用私鑰。
+- -in => 要解密的檔案。
+- -out => 指定輸出解密後的內容的檔案。
+
+![](https://i.imgur.com/wZnQzD1.png)
+
+---
+
+# Hash
+
+----
+
+### md5
+
+----
+
+### sha
+
+---
+
+# PyOpenSSL
+- [pyopenssl.org](https://www.pyopenssl.org/en/stable/index.html)
 - -out => 輸出私鑰到指定檔案。
 - numbits => 私鑰長度。
 
