--- a/KSU/一年級/期中報告.md
+++ b/KSU/一年級/期中報告.md
@@ -1,1 +1,474 @@
+---
+title: 期中報告_Python_2021
+tags: KSU_exam
+lang: zh-tw
+slideOptions:
+    theme: night    # 顏色主題
+    transition: 'convex'    # 換頁動畫
+    parallaxBackgroundImage: "https://www.silversurfers.com/wp-content/uploads/2019/07/bigstock-Dark-Street-Night-Smog-And-Sm-296290222.jpg"
+    parallaxBackgroundRepeat: no-repeat
+    parallaxBackgroundSize: cover
+---
 
+{%hackmd theme-dark %}
+
+## 使用pycryptodome實作現代密碼學
+- 姓名：何崇睿
+- 學號：4100E005
+- 班級：四資工一A
+- 老師：龍大大
+
+---
+
+## Agenda
+- 對稱式加解密
+    - AES
+    - DES
+    - 3DES
+- 非對稱式加解密
+    - RSA
+
+----
+
+## Agenda
+- Hash
+    - 概述
+	- Message Digest
+	- Hash Function
+	- md5
+	- sha256
+- Reference
+
+---
+
+## 對稱式加解密
+- 英文全名：[Symmetric Encryption & Decryption](https://zh.wikipedia.org/wiki/%E5%B0%8D%E7%A8%B1%E5%AF%86%E9%91%B0%E5%8A%A0%E5%AF%86)。
+- 加密解密都用同一把金鑰。
+![](https://i.imgur.com/M8qE2md.png)
+
+----
+
+### AES
+
+----
+
+#### 概述
+- 英文全名：[Advanced Encryption Standard](https://zh.wikipedia.org/wiki/%E9%AB%98%E7%BA%A7%E5%8A%A0%E5%AF%86%E6%A0%87%E5%87%86)。
+- 又稱Rijndael加密法。
+- 用來替代原先的DES。
+- 區塊(Block)長度固定為128位元(bit)。
+- 金鑰長度128，192或256位元(bit)。
+> 1 byte = 8 bit
+> [color=#7EDBFF]
+
+----
+
+#### 實作
+- pycryptodome
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from Crypto.Cipher import AES
+
+	cipher = AES.new(b'This is a key123', AES.MODE_CBC, b'This is an IV456')
+
+	message = b"flag(HappyCrypt)"
+
+	# ? Encrypt
+	ciphertext = cipher.encrypt(message)
+	print(ciphertext)
+
+	# ? Decrypt
+	d_cipher = AES.new(b'This is a key123', AES.MODE_CBC, b'This is an IV456')
+	print(d_cipher.decrypt(ciphertext))
+    ```
+- 運行結果
+    ![](https://i.imgur.com/gyUwG28.png)
+
+----
+
+#### 實作
+- cryptography
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	import os
+	from cryptography.hazmat.primitives.ciphers import Cipher, algorithms, modes
+
+	key = os.urandom(32)
+	# ? iv => initialization vector
+	iv = os.urandom(16)
+
+	cipher = Cipher(algorithms.AES(key), modes.CBC(iv))
+
+	# ? Encrypt
+	encryptor = cipher.encryptor()
+	# ciphertext = encryptor.update(b"This_is_test_hi.") + encryptor.finalize()
+	ciphertext = encryptor.update(b"This_is_test_hi.")
+	print(ciphertext)
+
+	# ? Decrypt
+	decryptor = cipher.decryptor()
+	# plaintext = decryptor.update(ciphertext) + decryptor.finalize()
+	plaintext = decryptor.update(ciphertext)
+	print(plaintext)
+    ```
+- 運行結果：
+    ![](https://i.imgur.com/x1sO1IC.png)
+
+----
+
+#### Reference
+- [基礎密碼學(對稱式與非對稱式加密技術)](https://medium.com/@RiverChan/%E5%9F%BA%E7%A4%8E%E5%AF%86%E7%A2%BC%E5%AD%B8-%E5%B0%8D%E7%A8%B1%E5%BC%8F%E8%88%87%E9%9D%9E%E5%B0%8D%E7%A8%B1%E5%BC%8F%E5%8A%A0%E5%AF%86%E6%8A%80%E8%A1%93-de25fd5fa537)
+- [對稱式加密演算法 - 大家都愛用的 AES](https://ithelp.ithome.com.tw/articles/10249488)
+
+----
+
+### DES
+
+----
+
+#### 概述
+- 英文全名：[Data Encryption Standard](https://zh.wikipedia.org/wiki/%E8%B3%87%E6%96%99%E5%8A%A0%E5%AF%86%E6%A8%99%E6%BA%96#%E5%AE%89%E5%85%A8%E4%B8%8E%E5%AF%86%E7%A0%81%E5%88%86%E6%9E%90)。
+- 已被破解。
+- 使用56位(bit) 金鑰。
+- 最實用的攻擊方法仍然是暴力破解。
+
+----
+
+#### 實作
+- pycryptodome
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from Crypto.Cipher import DES
+
+	# ? 密鑰為 8byte or 16byte
+	key = b'not_good'
+
+	cipher = DES.new(key, DES.MODE_OFB)
+	d_cipher = DES.new(key, DES.MODE_OFB)
+
+	# ? 明文要為8的倍數
+	plaintext = b'This_is_tttttest'
+
+	# ? Eecrypt
+	ciphertext = cipher.encrypt(plaintext)
+	print(ciphertext)
+
+	# ? Decrypt
+	plain = d_cipher.decrypt(ciphertext)
+	print(plaintext)
+    ```
+- 運行結果：
+    ![](https://i.imgur.com/ipk1ZKX.png)
+
+----
+
+#### 實作
+- cryptography
+    ```
+    無套件可用，除非自己寫
+    ```
+
+----
+
+#### Reference
+- [對稱式加密演算法 - DES & 3DES ](https://ithelp.ithome.com.tw/articles/10249098)
+
+----
+
+### 3DES
+
+----
+
+#### 概述
+- 英文全名： [Triple Data Encryption Standard](https://zh.wikipedia.org/zh-tw/3DES)。
+- 對每個數據塊（Block）應用三次數據加密標準（DES）算法。
+- 通過增加 DES 的密鑰長度來避免被暴力破解。
+- 也有人會簡寫為 TDES。
+- 使用168位(bit) 金鑰。
+
+----
+
+#### 實作
+- pycryptodome
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from Crypto.Cipher import DES3
+	from Crypto import Random
+
+	key = b'I_want_to_sleep.'
+	iv = Random.new().read(DES3.block_size)
+
+	cipher = DES3.new(key, DES3.MODE_OFB, iv)
+	d_cipher = DES3.new(key, DES3.MODE_OFB, iv)
+	plaintext = b'This_is_the_ttttttttttttttest.'
+
+	# ? Encrypt
+	ciphertext = cipher.encrypt(plaintext)
+	print(ciphertext)
+
+	# ? Decrypt
+	plain = d_cipher.decrypt(ciphertext)
+	# plain = d_cipher.decrypt(ciphertext)
+	# plain = d_cipher.decrypt(ciphertext)
+	print(plain)
+    ```
+- 運行結果：
+    ![](https://i.imgur.com/Typlxgb.png)
+
+----
+
+#### 實作
+- cryptography
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	import os
+	from cryptography.hazmat.primitives.ciphers import algorithms, Cipher, modes
+
+	key = os.urandom(16)
+	iv = os.urandom(8)
+
+	cipher = Cipher(algorithms.TripleDES(key), modes.CBC(iv))
+
+	# ? Encrypt
+	encryptor = cipher.encryptor()
+	ciphertext = encryptor.update(b"This_is_TDES_ha.")
+	print(ciphertext)
+
+	# ? Decrypt
+	decryptor = cipher.decryptor()
+	plaintext = decryptor.update(ciphertext)
+	print(plaintext)
+    ```
+- 運行結果：
+    ![](https://i.imgur.com/cdqel05.png)
+
+---
+
+## 非對稱式加解密
+- 英文：[Asymmetric Encryption & Decryption](https://zh.wikipedia.org/wiki/%E5%85%AC%E5%BC%80%E5%AF%86%E9%92%A5%E5%8A%A0%E5%AF%86)。
+- 使用兩個不同但相關聯的密鑰。
+- 分別為公鑰(Public Key)和私鑰(Private Key)。
+
+----
+
+### RSA
+
+----
+
+#### 概述：
+- 由 Ron Rivest、Adi Shamir 和 Leonard Adleman 在1977年一起提出。
+- RSA 由他們三人姓氏開頭字母拼在一起組成。
+
+----
+
+#### 實作
+- 生成公鑰(Public Key) 和私鑰(Private Key)
+    ```python=
+    from Crypto.PublicKey import RSA
+
+	# 產生 2048 位元 RSA 金鑰
+	key = RSA.generate(2048)
+
+	# RSA 私鑰
+	privateKey = key.export_key()
+	with open("./Crypto/非對稱式/RSA/KSU_hw/private.pem", "wb") as f:
+    f.write(privateKey)
+
+	# RSA 公鑰
+	publicKey = key.publickey().export_key()
+	with open("public.pem", "wb") as f:
+        f.write(publicKey)
+    ```
+
+----
+
+#### 實作
+- 加密(Encrypt)
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from Crypto.PublicKey import RSA
+	from Crypto.Random import get_random_bytes
+	from Crypto.Cipher import AES, PKCS1_OAEP
+
+	data = "This is ttttest.".encode("utf-8")
+	file_out = open("./Crypto/非對稱式/RSA/KSU_hw/encrypted_data.bin", "wb")
+
+	recipient_key = RSA.import_key(
+    open("./Crypto/非對稱式/RSA/KSU_hw/public.pem").read())
+	session_key = get_random_bytes(16)
+
+	# Encrypt the session key with the public RSA key
+	cipher_rsa = PKCS1_OAEP.new(recipient_key)
+	enc_session_key = cipher_rsa.encrypt(session_key)
+
+	# Encrypt the data with the AES session key
+	cipher_aes = AES.new(session_key, AES.MODE_EAX)
+	ciphertext, tag = cipher_aes.encrypt_and_digest(data)
+	[file_out.write(x)
+     for x in (enc_session_key, cipher_aes.nonce, tag, ciphertext)]
+	file_out.close()
+    ```
+
+----
+
+#### 實作
+- 解密(Decrypt)
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from Crypto.PublicKey import RSA
+	from Crypto.Cipher import AES, PKCS1_OAEP
+
+	file_in = open("./Crypto/非對稱式/RSA/KSU_hw/encrypted_data.bin", "rb")
+
+	private_key = RSA.import_key(
+        open("./Crypto/非對稱式/RSA/KSU_hw/private.pem").read())
+
+	enc_session_key, nonce, tag, ciphertext = \
+        [file_in.read(x) for x in (private_key.size_in_bytes(), 16, 16, -1)]
+
+	# Decrypt the session key with the private RSA key
+	cipher_rsa = PKCS1_OAEP.new(private_key)
+	session_key = cipher_rsa.decrypt(enc_session_key)
+
+	# Decrypt the data with the AES session key
+	cipher_aes = AES.new(session_key, AES.MODE_EAX, nonce)
+	data = cipher_aes.decrypt_and_verify(ciphertext, tag)
+	print(data.decode("utf-8"))
+    ```
+- 運行結果：
+    ![](https://i.imgur.com/EMyQeDu.png)
+
+---
+
+## Hash
+
+----
+
+### 概述
+- 中文：雜湊。
+- 用來驗證資料是否被竄改。
+![](https://i.imgur.com/j69EpqP.png)
+
+----
+
+### Message Digests
+- 中文：訊息摘要。
+- 將訊息透過 Hash Function 所計算出目前訊息的特徵值。
+
+----
+
+### Hash Function
+- 特性：
+	- 計算出 Message Digests 不須花太多時間。
+	- 不可逆。
+	- 不同訊息所算出來的 Message Digests 必須是不同的。
+
+----
+
+### md5
+
+----
+
+#### 概述
+- 一種被廣泛使用的密碼雜湊函式。
+- 可以產生出一個128位元(bit) 的 Message Digest。
+
+----
+
+#### 實作
+- pycryptodome
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from Crypto.Hash import MD5
+
+	h = MD5.new()
+	h.update(b'Hello World')
+	print(h.hexdigest())
+    ```
+- 運作結果：
+    ![](https://i.imgur.com/qWZSNlE.png)
+
+----
+
+#### 實作
+- cryptography
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from cryptography.hazmat.primitives import hashes
+
+	digest = hashes.Hash(hashes.MD5())
+	digest.update(b"Hello World")
+	out = digest.finalize().hex()
+	print(out)
+    ```
+- 運作結果：
+    ![](https://i.imgur.com/PDbEgqt.png)
+
+----
+
+### sha256
+
+----
+
+#### 概述
+- 英文：Secure Hash Algorithm。
+- 是FIPS所認證的安全雜湊演算法。
+
+----
+
+#### 實作
+- pycryptodome
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from Crypto.Hash import SHA256
+
+	h = SHA256.new()
+	h.update(b'Hello World')
+	print(h.hexdigest())
+    ```
+- 運作結果：
+    ![](https://i.imgur.com/bCZpw7o.png)
+
+----
+
+#### 實作
+- cryptography
+    ```python=
+    #! /usr/bin/env python3
+	# -*- coding: utf-8 -*-
+
+	from cryptography.hazmat.primitives import hashes
+
+	digest = hashes.Hash(hashes.SHA256())
+	digest.update(b"Hello World")
+	out = digest.finalize().hex()
+	print(out)
+    ```
+- 運作結果：
+    ![](https://i.imgur.com/3gSlxFp.png)
+
+---
+
+## Reference
+- [cryptography官方網站](https://cryptography.io)
+- [pycryptodome官方網站](https://pycryptodome.readthedocs.io)
