--- a/KSU/一年級/期中平時報告.md
+++ b/KSU/一年級/期中平時報告.md
@@ -16,6 +16,59 @@ slideOptions:
 - 姓名：何崇睿
 - 學號：4100E005
 - 班級：四資工一A
+- 老師：龍大大
+
+---
+
+# Agenda
+- 介紹
+    - SSL
+    - TLS
+    - Reference
+- 可用於
+
+----
+
+# Agenda
+- 下載
+    - Kali Linux
+    - Ubuntu 20.04
+    - Google Colab
+    - Python
+
+----
+
+# Agenda
+- 指令用法
+    - version
+    - enc
+- 對稱式加解密
+    - AES
+        - 概述
+        - Encrypt
+        - Decrypt
+        - Reference
+
+----
+
+# Agenda
+- 非對稱式加解密
+    - RSA
+        - 概述
+        - 生成私鑰
+        - 生成公鑰
+        - 加密
+        - 解密
+
+----
+
+# Agenda
+- Hash
+    - 概述
+    - Message Digest
+    - Hash Function
+    - md5
+    - SHA家族
 
 ---
 
@@ -26,19 +79,19 @@ slideOptions:
 
 ----
 
-### SSL(已被破解)
+## SSL(已被破解)
 - Secure Sockets Layer(安全通訊層)
 - 用於保持網際網路連線安全以及防止在兩個系統之間發送的所有敏感資料被罪犯讀取及修改任何傳輸的資訊，包括潛在的個人詳細資料
 
 ----
 
-### TLS：
+## TLS：
 - Transport Layer Security(傳輸層安全)
 - 是更新、更安全的 SSL 版本，通常也會稱為SSL
 
 ----
 
-### Reference
+## Reference
 - [終極指南什麼是 SSL、TLS 以及 HTTPS？](https://www.websecurity.digicert.com/zh/hk/security-topics/what-is-ssl-tls-https)
 
 ---
@@ -46,41 +99,15 @@ slideOptions:
 # 可用於
 - 建立和管理私鑰(private keys)、公鑰(public keys)和參數(parameters)
 - 公鑰加密操作
-- 生成x.509證書、CSRs和CRLs
+- 生成x.509證書(certificate)、CSRs和CRLs
 - 計算Message Digests
 
 ----
 
-# 可用於
 - 加密(Encryption)或解密(Decryption)
 - SSL / TLS 客戶端(Client)和伺服端(Server)測試
 - 處理[S / MIME](https://zh.wikipedia.org/wiki/S/MIME)的簽章(signed)或加密郵件
 - [時間戳](https://zh.wikipedia.org/wiki/%E6%99%82%E9%96%93%E6%88%B3)請求(requests)、生成(generation)和驗證(verification)
-
-----
-
-### Message Digests
-- 訊息摘要
-- 利用Hash Function加密你要傳輸的訊息所產生出來
-- 用來驗證訊息的完整性
-- [參考網站](https://david50.pixnet.net/blog/post/28798505)
-
-----
-
-### Hash Function
-- 常見的有：
-    - [MD5(Message-Digest algorithm 5)](https://zh.wikipedia.org/wiki/MD5)
-    - [SHA(Secure Hash Algorithm)](https://zh.wikipedia.org/wiki/SHA%E5%AE%B6%E6%97%8F)
-    - [MAC(Message Authentication Code)](https://zh.wikipedia.org/wiki/%E8%A8%8A%E6%81%AF%E9%91%91%E5%88%A5%E7%A2%BC)
-    - [HMAC(Hash-based Message Authentication Code)](https://zh.wikipedia.org/wiki/HMAC)
-
-----
-
-### Hash Function
-- 特性：
-    - 計算出Message Digests不須花太多時間
-    - 不可逆
-    - 不同訊息所算出來的Message Digests必須是不同的
 
 ---
 
@@ -88,14 +115,14 @@ slideOptions:
 
 ----
 
-### [Kali Linux](https://www.kali.org/get-kali/#kali-platforms)
-- kali linux 已經幫你下載好openssl了
-- 確認已下載
+## [Kali Linux](https://www.kali.org/get-kali/#kali-platforms)
+- kali linux 已經幫你下載好openssl了。
+- 確認已下載。
     ![](https://i.imgur.com/6dhA0yW.png)
 
 ----
 
-### [Ubuntu 20.04](https://ubuntu.com/download/desktop)
+## [Ubuntu 20.04](https://ubuntu.com/download/desktop)
 - 下載
 	```shell
 	sudo apt install openssl
@@ -105,7 +132,7 @@ slideOptions:
 
 ----
 
-### [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb?hl=zh-tw)
+## [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb?hl=zh-tw)
 - 下載
     ```shell
     !apt install openssl
@@ -129,7 +156,7 @@ slideOptions:
 
 ----
 
-### version
+## version
 - 顯示 OpenSSL 版本
 	```shell
 	openssl version
@@ -137,7 +164,7 @@ slideOptions:
 
 ----
 
-### enc
+## enc
 - 以指定的 cipher 進行資料的加解密，不管加密或解密都是使用這一個指令
 - Encrypt
 	```shell
@@ -151,234 +178,68 @@ slideOptions:
 ---
 
 # 對稱式加解密
+- 英文全名：[Symmetric Encryption & Decryption](https://zh.wikipedia.org/wiki/%E5%B0%8D%E7%A8%B1%E5%AF%86%E9%91%B0%E5%8A%A0%E5%AF%86)。
+- 加密解密都用同一把金鑰。
+![](https://i.imgur.com/M8qE2md.png)
 
 ----
 
-### AES
-- Encrypt
-    ```shell
-    openssl -e -aes[key長度]-[加密模式] -in [input file] -out [output file]
-    
-                                        or
-                                         
-    openssl -e -aes-[key長度]-[加密模式] -in [input file] -out [output file]
-    ```
-- Decrypt
-    ```shell
-    openssl -d -aes[key長度]-[加密模式] -in [input file] -out [output file]
-    
-                                        or
-                                         
-    openssl -d -aes-[key長度]-[加密模式] -in [input file] -out [output file]
-    ```
+## AES
+### 概述
+- 英文全名：[Advanced Encryption Standard](https://zh.wikipedia.org/wiki/%E9%AB%98%E7%BA%A7%E5%8A%A0%E5%AF%86%E6%A0%87%E5%87%86)。
+- 又稱Rijndael加密法。
+- 用來替代原先的DES。
+- 區塊(Block)長度固定為128位元(bit)。
+- 金鑰長度128，192或256位元(bit)。
 
 ----
 
-### DES
-
-
----
-
-# 非對稱式加解密
-
-----
-
-### RSA
-#### 生成私鑰(Private Key)
+## AES
+### Encrypt
 ```shell
-openssl genrsa [-out filename] [numbits]
+openssl enc -e -aes[key長度]-[加密模式] -in [input file] -out [output file]
+                                    or
+openssl enc -e -aes-[key長度]-[加密模式] -in [input file] -out [output file]
 ```
-- genrsa => 用來生成 RSA---
-title: 期中平時報告_OpenSSL_2021
-tags: KSU_exam
-lang: zh-tw
-slideOptions:
-    theme: night    # 顏色主題
-    transition: 'convex'    # 換頁動畫
-    parallaxBackgroundImage: "https://eskipaper.com/images/dark-background-wallpaper-1.jpg"
-    parallaxBackgroundRepeat: no-repeat
-    parallaxBackgroundSize: cover
----
-
-{%hackmd theme-dark %}
-
-# 使用openssl實作現代密碼學
-- 姓名：何崇睿
-- 學號：4100E005
-- 班級：四資工一A
-
----
-
-# 介紹
-- OpenSSL 是一個加密工具包。
-- 實現了 SSL v2 / v3 和 TLS v1 網絡協議以及它們所需的相關加密標準。
-- [openssl.org](https://www.openssl.org/)
+![](https://i.imgur.com/OtJFz7v.png)
 
 ----
 
-### SSL(已被破解)
-- Secure Sockets Layer(安全通訊層)
-- 用於保持網際網路連線安全以及防止在兩個系統之間發送的所有敏感資料被罪犯讀取及修改任何傳輸的資訊，包括潛在的個人詳細資料
-
-----
-
-### TLS：
-- Transport Layer Security(傳輸層安全)
-- 是更新、更安全的 SSL 版本，通常也會稱為SSL
+## AES
+### Decrypt
+```shell
+openssl enc -d -aes[key長度]-[加密模式] -in [input file] -out [output file]
+                                    or
+openssl enc -d -aes-[key長度]-[加密模式] -in [input file] -out [output file]
+```
+![](https://i.imgur.com/tcYEcZj.png)
 
 ----
 
 ### Reference
-- [終極指南什麼是 SSL、TLS 以及 HTTPS？](https://www.websecurity.digicert.com/zh/hk/security-topics/what-is-ssl-tls-https)
-
----
-
-# 可用於
-- 建立和管理私鑰(private keys)、公鑰(public keys)和參數(parameters)
-- 公鑰加密操作
-- 生成x.509證書、CSRs和CRLs
-- 計算Message Digests
-
-----
-
-# 可用於
-- 加密(Encryption)或解密(Decryption)
-- SSL / TLS 客戶端(Client)和伺服端(Server)測試
-- 處理[S / MIME](https://zh.wikipedia.org/wiki/S/MIME)的簽章(signed)或加密郵件
-- [時間戳](https://zh.wikipedia.org/wiki/%E6%99%82%E9%96%93%E6%88%B3)請求(requests)、生成(generation)和驗證(verification)
-
-----
-
-### Message Digests
-- 訊息摘要
-- 利用Hash Function加密你要傳輸的訊息所產生出來
-- 用來驗證訊息的完整性
-- [參考網站](https://david50.pixnet.net/blog/post/28798505)
-
-----
-
-### Hash Function
-- 常見的有：
-    - [MD5(Message-Digest algorithm 5)](https://zh.wikipedia.org/wiki/MD5)
-    - [SHA(Secure Hash Algorithm)](https://zh.wikipedia.org/wiki/SHA%E5%AE%B6%E6%97%8F)
-    - [MAC(Message Authentication Code)](https://zh.wikipedia.org/wiki/%E8%A8%8A%E6%81%AF%E9%91%91%E5%88%A5%E7%A2%BC)
-    - [HMAC(Hash-based Message Authentication Code)](https://zh.wikipedia.org/wiki/HMAC)
-
-----
-
-### Hash Function
-- 特性：
-    - 計算出Message Digests不須花太多時間
-    - 不可逆
-    - 不同訊息所算出來的Message Digests必須是不同的
-
----
-
-# 下載
-
-----
-
-### [Kali Linux](https://www.kali.org/get-kali/#kali-platforms)
-- kali linux 已經幫你下載好openssl了
-- 確認已下載
-    ![](https://i.imgur.com/6dhA0yW.png)
-
-----
-
-### [Ubuntu 20.04](https://ubuntu.com/download/desktop)
-- 下載
-	```shell
-	sudo apt install openssl
-	```
-- 確認已下載
-![](https://i.imgur.com/pVEoZL4.png)
-
-----
-
-### [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb?hl=zh-tw)
-- 下載
-    ```shell
-    !apt install openssl
-    ```
-- 確認已下載
-![](https://i.imgur.com/AJGjJKp.png)
-
-----
-
-### [Python](https://www.python.org/)
-- 下載
-    ```shell
-    pip install pyopenssl
-    ```
-- 確認已下載
-![](https://i.imgur.com/ltfeJzT.png)
-
----
-
-# 指令用法
-
-----
-
-### version
-- 顯示 OpenSSL 版本
-	```shell
-	openssl version
-	```
-
-----
-
-### enc
-- 以指定的 cipher 進行資料的加解密，不管加密或解密都是使用這一個指令
-- Encrypt
-	```shell
-	openssl enc -e [指定 cipher] -in [input file] -out [output file]
-	```
-- Decrypt
-    ```shell
-    openssl enc -d [指定 cipher] -in [input file] -out [output file]
-    ```
-
----
-
-# 對稱式加解密
-
-----
-
-### AES
-- Encrypt
-    ```shell
-    openssl -e -aes[key長度]-[加密模式] -in [input file] -out [output file]
-    
-                                        or
-                                         
-    openssl -e -aes-[key長度]-[加密模式] -in [input file] -out [output file]
-    ```
-- Decrypt
-    ```shell
-    openssl -d -aes[key長度]-[加密模式] -in [input file] -out [output file]
-    
-                                        or
-                                         
-    openssl -d -aes-[key長度]-[加密模式] -in [input file] -out [output file]
-    ```
-
-----
-
-### DES
-
+- [基礎密碼學(對稱式與非對稱式加密技術)](https://medium.com/@RiverChan/%E5%9F%BA%E7%A4%8E%E5%AF%86%E7%A2%BC%E5%AD%B8-%E5%B0%8D%E7%A8%B1%E5%BC%8F%E8%88%87%E9%9D%9E%E5%B0%8D%E7%A8%B1%E5%BC%8F%E5%8A%A0%E5%AF%86%E6%8A%80%E8%A1%93-de25fd5fa537)
 
 ---
 
 # 非對稱式加解密
+- 英文全名：[Asymmetric Encryption & Decryption](https://zh.wikipedia.org/wiki/%E5%85%AC%E5%BC%80%E5%AF%86%E9%92%A5%E5%8A%A0%E5%AF%86)。
+- 使用兩個不同但相關聯的密鑰。
+- 分別為公鑰(Public Key)和私鑰(Private Key)。
 
 ----
 
 ### RSA
+#### 概述：
+- 由 Ron Rivest、Adi Shamir 和 Leonard Adleman 在1977年一起提出。
+- RSA 由他們三人姓氏開頭字母拼在一起組成。
+
+----
+
 #### 生成私鑰(Private Key)
 ```shell
 openssl genrsa [-out filename] [numbits]
 ```
-- genrsa => 用來生成 RSA
+- genrsa => 用來生成 RSA。
 - -out => 輸出私鑰到指定檔案。
 - numbits => 私鑰長度。
 
@@ -436,89 +297,29 @@ openssl rsautl [-decrypt] [-inkey private_key_file] [-in filename] [-out filenam
 
 ---
 
-# Hash
+# [Hash](https://zh.wikipedia.org/wiki/%E6%95%A3%E5%88%97%E5%87%BD%E6%95%B8)
+## 概述
+- 中文：雜湊。
+- 用來驗證資料是否被竄改。
+![](https://i.imgur.com/j69EpqP.png)
 
 ----
 
-### md5
+## Message Digests
+- 中文：訊息摘要。
+- 將訊息透過 Hash Function 所計算出目前訊息的特徵值。
 
 ----
 
-### sha
-
----
-
-# PyOpenSSL
-- [pyopenssl.org](https://www.pyopenssl.org/en/stable/index.html)---
-title: 期中平時報告_OpenSSL_2021
-tags: KSU_exam
-lang: zh-tw
-slideOptions:
-    theme: night    # 顏色主題
-    transition: 'convex'    # 換頁動畫
-    parallaxBackgroundImage: "https://eskipaper.com/images/dark-background-wallpaper-1.jpg"
-    parallaxBackgroundRepeat: no-repeat
-    parallaxBackgroundSize: cover
----
-
-{%hackmd theme-dark %}
-
-# 使用openssl實作現代密碼學
-- 姓名：何崇睿
-- 學號：4100E005
-- 班級：四資工一A
-
----
-
-# 介紹
-- OpenSSL 是一個加密工具包。
-- 實現了 SSL v2 / v3 和 TLS v1 網絡協議以及它們所需的相關加密標準。
-- [openssl.org](https://www.openssl.org/)
+## Hash Function
+### 特性：
+- 計算出 Message Digests 不須花太多時間。
+- 不可逆。
+- 不同訊息所算出來的 Message Digests 必須是不同的。
 
 ----
 
-### SSL(已被破解)
-- Secure Sockets Layer(安全通訊層)
-- 用於保持網際網路連線安全以及防止在兩個系統之間發送的所有敏感資料被罪犯讀取及修改任何傳輸的資訊，包括潛在的個人詳細資料
-
-----
-
-### TLS：
-- Transport Layer Security(傳輸層安全)
-- 是更新、更安全的 SSL 版本，通常也會稱為SSL
-
-----
-
-### Reference
-- [終極指南什麼是 SSL、TLS 以及 HTTPS？](https://www.websecurity.digicert.com/zh/hk/security-topics/what-is-ssl-tls-https)
-
----
-
-# 可用於
-- 建立和管理私鑰(private keys)、公鑰(public keys)和參數(parameters)
-- 公鑰加密操作
-- 生成x.509證書、CSRs和CRLs
-- 計算Message Digests
-
-----
-
-# 可用於
-- 加密(Encryption)或解密(Decryption)
-- SSL / TLS 客戶端(Client)和伺服端(Server)測試
-- 處理[S / MIME](https://zh.wikipedia.org/wiki/S/MIME)的簽章(signed)或加密郵件
-- [時間戳](https://zh.wikipedia.org/wiki/%E6%99%82%E9%96%93%E6%88%B3)請求(requests)、生成(generation)和驗證(verification)
-
-----
-
-### Message Digests
-- 訊息摘要
-- 利用Hash Function加密你要傳輸的訊息所產生出來
-- 用來驗證訊息的完整性
-- [參考網站](https://david50.pixnet.net/blog/post/28798505)
-
-----
-
-### Hash Function
+## Hash Function
 - 常見的有：
     - [MD5(Message-Digest algorithm 5)](https://zh.wikipedia.org/wiki/MD5)
     - [SHA(Secure Hash Algorithm)](https://zh.wikipedia.org/wiki/SHA%E5%AE%B6%E6%97%8F)
@@ -527,508 +328,38 @@ slideOptions:
 
 ----
 
-### Hash Function
-- 特性：
-    - 計算出Message Digests不須花太多時間
-    - 不可逆
-    - 不同訊息所算出來的Message Digests必須是不同的
-
----
-
-# 下載
+## md5
+### 概述
+- 一種被廣泛使用的密碼雜湊函式。
+- 可以產生出一個128位元(bit) 的 Message Digest。
 
 ----
 
-### [Kali Linux](https://www.kali.org/get-kali/#kali-platforms)
-- kali linux 已經幫你下載好openssl了
-- 確認已下載
-    ![](https://i.imgur.com/6dhA0yW.png)
-
-----
-
-### [Ubuntu 20.04](https://ubuntu.com/download/desktop)
-- 下載
-	```shell
-	sudo apt install openssl
-	```
-- 確認已下載
-![](https://i.imgur.com/pVEoZL4.png)
-
-----
-
-### [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb?hl=zh-tw)
-- 下載
-    ```shell
-    !apt install openssl
-    ```
-- 確認已下載
-![](https://i.imgur.com/AJGjJKp.png)
-
-----
-
-### [Python](https://www.python.org/)
-- 下載
-    ```shell
-    pip install pyopenssl
-    ```
-- 確認已下載
-![](https://i.imgur.com/ltfeJzT.png)
-
----
-
-# 指令用法
-
-----
-
-### version
-- 顯示 OpenSSL 版本
-	```shell
-	openssl version
-	```
-
-----
-
-### enc
-- 以指定的 cipher 進行資料的加解密，不管加密或解密都是使用這一個指令
-- Encrypt
-	```shell
-	openssl enc -e [指定 cipher] -in [input file] -out [output file]
-	```
-- Decrypt
-    ```shell
-    openssl enc -d [指定 cipher] -in [input file] -out [output file]
-    ```
-
----
-
-# 對稱式加解密
-
-----
-
-### AES
-- Encrypt
-    ```shell
-    openssl -e -aes[key長度]-[加密模式] -in [input file] -out [output file]
-    
-                                        or
-                                         
-    openssl -e -aes-[key長度]-[加密模式] -in [input file] -out [output file]
-    ```
-- Decrypt
-    ```shell
-    openssl -d -aes[key長度]-[加密模式] -in [input file] -out [output file]
-    
-                                        or
-                                         
-    openssl -d -aes-[key長度]-[加密模式] -in [input file] -out [output file]
-    ```
-
-----
-
-### DES
-
-
----
-
-# 非對稱式加解密
-
-----
-
-### RSA
-#### 生成私鑰(Private Key)
+### 計算
 ```shell
-openssl genrsa [-out filename] [numbits]
+md5sum [filename]
 ```
-- genrsa => 用來生成 RSA
-- -out => 輸出私鑰到指定檔案。
-- numbits => 私鑰長度。
-
-![](https://i.imgur.com/MTuC5Pv.png)
+![](https://i.imgur.com/HHbvy94.png)
 
 ----
 
-#### 生成公鑰(Public Key)
+## [SHA家族](https://zh.wikipedia.org/wiki/SHA%E5%AE%B6%E6%97%8F)
+### 概述
+- 英文：Secure Hash Algorithm。
+- 是FIPS所認證的安全雜湊演算法。
+
+----
+
+### 計算
 ```shell
- openssl rsa [-in filename] [-out filename] [-outform PEM|NET|DER] [-pubout]
+sha1sum [filename]
 ```
-- -in => 指定要輸入的私鑰。
-- -out => 輸出公鑰到指定檔案。
-- -outform => 指定輸出格式。
-- -pubout => 將輸出設為公鑰(預設為私鑰)。
-
-![](https://i.imgur.com/6tJvuYX.png)
+![](https://i.imgur.com/8mfFIvu.png)
 
 ----
 
-#### 加密(Encrypt)
-- 公鑰加密
-	```shell
-	openssl rsautl [-encrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
-    ```
-	- -inkey => 指定要用來加密的金鑰(預設為私鑰)。
-	- -pubin => 將 -inkey 指定用來加密的金鑰設為公鑰。
-	- -in => 指定要加密的檔案。
-	- -out => 指定輸出加密後的內容的檔案。
-    
-    ![](https://i.imgur.com/ZlfeDjf.png)
-
-----
-
-#### 加密(Encrypt)
-- 私鑰加密
-    ```shell
-    openssl rsautl [-encrypt] [-inkey private_key_file] [-in filename] [-out filename]
-    ```
-    - 去除 -pubin => -inkey 預設為指定私鑰來加密。
-    
-    ![](https://i.imgur.com/kWJdlyZ.png)
-
-----
-
-#### 解密(decrypt)
-```shell
-openssl rsautl [-decrypt] [-inkey private_key_file] [-in filename] [-out filename]
-```
-- 解密只能使用私鑰。
-- -in => 要解密的檔案。
-- -out => 指定輸出解密後的內容的檔案。
-
-![](https://i.imgur.com/wZnQzD1.png)
-
----
-
-# Hash
-
-----
-
-### md5
-
-----
-
-### sha
-
----
-
-# PyOpenSSL
-- [pyopenssl.org](https://www.pyopenssl.org/en/stable/index.html)---
-title: 期中平時報告_OpenSSL_2021
-tags: KSU_exam
-lang: zh-tw
-slideOptions:
-    theme: night    # 顏色主題
-    transition: 'convex'    # 換頁動畫
-    parallaxBackgroundImage: "https://eskipaper.com/images/dark-background-wallpaper-1.jpg"
-    parallaxBackgroundRepeat: no-repeat
-    parallaxBackgroundSize: cover
----
-
-{%hackmd theme-dark %}
-
-# 使用openssl實作現代密碼學
-- 姓名：何崇睿
-- 學號：4100E005
-- 班級：四資工一A
-
----
-
-# 介紹
-- OpenSSL 是一個加密工具包。
-- 實現了 SSL v2 / v3 和 TLS v1 網絡協議以及它們所需的相關加密標準。
-- [openssl.org](https://www.openssl.org/)
-
-----
-
-### SSL(已被破解)
-- Secure Sockets Layer(安全通訊層)
-- 用於保持網際網路連線安全以及防止在兩個系統之間發送的所有敏感資料被罪犯讀取及修改任何傳輸的資訊，包括潛在的個人詳細資料
-
-----
-
-### TLS：
-- Transport Layer Security(傳輸層安全)
-- 是更新、更安全的 SSL 版本，通常也會稱為SSL
-
-----
-
-### Reference
-- [終極指南什麼是 SSL、TLS 以及 HTTPS？](https://www.websecurity.digicert.com/zh/hk/security-topics/what-is-ssl-tls-https)
-
----
-
-# 可用於
-- 建立和管理私鑰(private keys)、公鑰(public keys)和參數(parameters)
-- 公鑰加密操作
-- 生成x.509證書、CSRs和CRLs
-- 計算Message Digests
-
-----
-
-# 可用於
-- 加密(Encryption)或解密(Decryption)
-- SSL / TLS 客戶端(Client)和伺服端(Server)測試
-- 處理[S / MIME](https://zh.wikipedia.org/wiki/S/MIME)的簽章(signed)或加密郵件
-- [時間戳](https://zh.wikipedia.org/wiki/%E6%99%82%E9%96%93%E6%88%B3)請求(requests)、生成(generation)和驗證(verification)
-
-----
-
-### Message Digests
-- 訊息摘要
-- 利用Hash Function加密你要傳輸的訊息所產生出來
-- 用來驗證訊息的完整性
+## Reference
 - [參考網站](https://david50.pixnet.net/blog/post/28798505)
-
-----
-
-### Hash Function
-- 常見的有：
-    - [MD5(Message-Digest algorithm 5)](https://zh.wikipedia.org/wiki/MD5)
-    - [SHA(Secure Hash Algorithm)](https://zh.wikipedia.org/wiki/SHA%E5%AE%B6%E6%97%8F)
-    - [MAC(Message Authentication Code)](https://zh.wikipedia.org/wiki/%E8%A8%8A%E6%81%AF%E9%91%91%E5%88%A5%E7%A2%BC)
-    - [HMAC(Hash-based Message Authentication Code)](https://zh.wikipedia.org/wiki/HMAC)
-
-----
-
-### Hash Function
-- 特性：
-    - 計算出Message Digests不須花太多時間
-    - 不可逆
-    - 不同訊息所算出來的Message Digests必須是不同的
-
----
-
-# 下載
-
-----
-
-### [Kali Linux](https://www.kali.org/get-kali/#kali-platforms)
-- kali linux 已經幫你下載好openssl了
-- 確認已下載
-    ![](https://i.imgur.com/6dhA0yW.png)
-
-----
-
-### [Ubuntu 20.04](https://ubuntu.com/download/desktop)
-- 下載
-	```shell
-	sudo apt install openssl
-	```
-- 確認已下載
-![](https://i.imgur.com/pVEoZL4.png)
-
-----
-
-### [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb?hl=zh-tw)
-- 下載
-    ```shell
-    !apt install openssl
-    ```
-- 確認已下載
-![](https://i.imgur.com/AJGjJKp.png)
-
-----
-
-### [Python](https://www.python.org/)
-- 下載
-    ```shell
-    pip install pyopenssl
-    ```
-- 確認已下載
-![](https://i.imgur.com/ltfeJzT.png)
-
----
-
-# 指令用法
-
-----
-
-### version
-- 顯示 OpenSSL 版本
-	```shell
-	openssl version
-	```
-
-----
-
-### enc
-- 以指定的 cipher 進行資料的加解密，不管加密或解密都是使用這一個指令
-- Encrypt
-	```shell
-	openssl enc -e [指定 cipher] -in [input file] -out [output file]
-	```
-- Decrypt
-    ```shell
-    openssl enc -d [指定 cipher] -in [input file] -out [output file]
-    ```
-
----
-
-# 對稱式加解密
-
-----
-
-### AES
-- Encrypt
-    ```shell
-    openssl -e -aes[key長度]-[加密模式] -in [input file] -out [output file]
-    
-                                        or
-                                         
-    openssl -e -aes-[key長度]-[加密模式] -in [input file] -out [output file]
-    ```
-- Decrypt
-    ```shell
-    openssl -d -aes[key長度]-[加密模式] -in [input file] -out [output file]
-    
-                                        or
-                                         
-    openssl -d -aes-[key長度]-[加密模式] -in [input file] -out [output file]
-    ```
-
-----
-
-### DES
-
-
----
-
-# 非對稱式加解密
-
-----
-
-### RSA
-#### 生成私鑰(Private Key)
-```shell
-openssl genrsa [-out filename] [numbits]
-```
-- genrsa => 用來生成 RSA
-- -out => 輸出私鑰到指定檔案。
-- numbits => 私鑰長度。
-
-![](https://i.imgur.com/MTuC5Pv.png)
-
-----
-
-#### 生成公鑰(Public Key)
-```shell
- openssl rsa [-in filename] [-out filename] [-outform PEM|NET|DER] [-pubout]
-```
-- -in => 指定要輸入的私鑰。
-- -out => 輸出公鑰到指定檔案。
-- -outform => 指定輸出格式。
-- -pubout => 將輸出設為公鑰(預設為私鑰)。
-
-![](https://i.imgur.com/6tJvuYX.png)
-
-----
-
-#### 加密(Encrypt)
-- 公鑰加密
-	```shell
-	openssl rsautl [-encrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
-    ```
-	- -inkey => 指定要用來加密的金鑰(預設為私鑰)。
-	- -pubin => 將 -inkey 指定用來加密的金鑰設為公鑰。
-	- -in => 指定要加密的檔案。
-	- -out => 指定輸出加密後的內容的檔案。
-    
-    ![](https://i.imgur.com/ZlfeDjf.png)
-
-----
-
-#### 加密(Encrypt)
-- 私鑰加密
-    ```shell
-    openssl rsautl [-encrypt] [-inkey private_key_file] [-in filename] [-out filename]
-    ```
-    - 去除 -pubin => -inkey 預設為指定私鑰來加密。
-    
-    ![](https://i.imgur.com/kWJdlyZ.png)
-
-----
-
-#### 解密(decrypt)
-```shell
-openssl rsautl [-decrypt] [-inkey private_key_file] [-in filename] [-out filename]
-```
-- 解密只能使用私鑰。
-- -in => 要解密的檔案。
-- -out => 指定輸出解密後的內容的檔案。
-
-![](https://i.imgur.com/wZnQzD1.png)
-
----
-
-# Hash
-
-----
-
-### md5
-
-----
-
-### sha
-
----
-
-# PyOpenSSL
-- [pyopenssl.org](https://www.pyopenssl.org/en/stable/index.html)
-- -out => 輸出私鑰到指定檔案。
-- numbits => 私鑰長度。
-
-![](https://i.imgur.com/MTuC5Pv.png)
-
-----
-
-### RSA
-#### 生成公鑰(Public Key)
-```shell
- openssl rsa [-in filename] [-out filename] [-outform PEM|NET|DER] [-pubout]
-```
-- -in => 指定要輸入的私鑰。
-- -out => 輸出公鑰到指定檔案。
-- -outform => 指定輸出格式。
-- -pubout => 將輸出設為公鑰(預設為私鑰)。
-
-![](https://i.imgur.com/6tJvuYX.png)
-
-----
-
-### RSA
-#### 加密(Encrypt)
-- 公鑰加密
-	```shell
-	openssl rsautl [-encrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
-    ```
-- 私鑰加密
-    ```shell
-    openssl rsautl [-encrypt] [-inkey private_key_file] [-in filename] [-out filename]
-    ```
-
-----
-
-### RSA
-#### 解密(decrypt)
-- 公鑰解密
-    ```shell
-    openssl rsautl [-decrypt] [-inkey public_key_file] [-pubin] [-in filename] [-out filename]
-    ```
-
-- 私鑰解密
-    ```shell
-    openssl rsautl [-decrypt] [-inkey private_key_file] [-in filename] [-out filename]
-    ```
-
----
-
-# Hash
-
-----
-
-### md5
-
-----
-
-### sha
 
 ---
 
